# AI-Phishing-email-detector

./: .gitignore  AI_phishing_detector_launcher.bat  PRODUCT_REQUIREMENTS.md  README.md  config.json.template  main.py  pyproject.toml  run_app.bat  run_app_direct.bat  setup.bat  troubleshoot.bat
src/: __init__.py  ai_analyzer.py  app.py  config.py  dataset_manager.py  email_parser.py  report_generator.py  security_analyzer.py
